stage 1 project2 update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee Shop</title>
     <meta name="author" content="Megan Jakims" />
-    <!--TODO ADD KEYWORDS & DESCRIPTION META TAGS-->
+    <meta
+      name="desription"
+      content="Ingredients to fuel your learning journey!"
+    />
     <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
