Stage 1 project2 update

--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
       name="desription"
       content="Ingredients to fuel your learning journey!"
     />
-    <meta
-      name="keywords"
-      content="coffee, energize, reseration"
-      <link
-      rel="stylesheet"
-      href="vendor/normalize.css"
-    />
+    <meta name="keywords" content="coffee, energize, reseration" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="pages/index.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
