--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Coffee Shop</title>
     <meta name="author" content="Megan Jakims" />
     <meta
-      name="desription"
+      name="description"
       content="Ingredients to fuel your learning journey!"
     />
     <meta name="keywords" content="coffee, energize, reseration" />
