--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
-
           <ul class="recipes__videos">
             <li>
               <iframe
+                class="videos__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=3aMpGxfs9eYTLFYQ"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -91,6 +91,7 @@
             </li>
             <li>
               <iframe
+                class="videos__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=HnJTniFEqahkob5L"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -102,9 +103,8 @@
               </p>
             </li>
           </ul>
-          <video class="recipes__iframe"></video>
         </section>
-        <section id="reservation" class="book a table"></section>
+        <section id="reservation" class="reservation"></section>
         <section id="menu" class="menu"></section>
         <section id="about" class="about"></section>
       </main>
