--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <ul class="recipes__videos">
             <li>
               <iframe
-                class="videos__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=3aMpGxfs9eYTLFYQ"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -91,7 +91,7 @@
             </li>
             <li>
               <iframe
-                class="videos__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=HnJTniFEqahkob5L"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
