Project2 stage2 update

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </header>
       <main class="content">
-        <section id="#recipes" class="recipes">
+        <section id="recipes" class="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -106,7 +106,6 @@
         </section>
         <section id="reservation" class="reservation"></section>
         <section id="menu" class="menu"></section>
-        <section id="about" class="about"></section>
       </main>
       <footer id="contacts" class="footer"></footer>
     </div>
