Project2 stage2 update

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </section>
         <section id="reservation" class="reservation"></section>
         <section id="menu" class="menu"></section>
+        <section class="about"></section>
       </main>
       <footer id="contacts" class="footer"></footer>
     </div>
