--- a/index.html
+++ b/index.html
@@ -104,7 +104,59 @@
             </li>
           </ul>
         </section>
-        <section id="reservation" class="reservation"></section>
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name-input" class="form__label">
+                Name *
+                <input
+                  type="text"
+                  class="form__input"
+                  id="name-input"
+                  required
+                  placeholder="Name Surname"
+              /></label>
+              <label for="number-input" class="form__label">
+                Number of guests *
+                <input
+                  type="number"
+                  class="form__input"
+                  name="number-input"
+                  required
+                  placeholder="1-8"
+                  min="1"
+                  max="8"
+              /></label>
+              <label for="date-input" class="form__label">
+                Date & time *
+                <input
+                  type="datetime-local"
+                  class="form__input"
+                  name="date-input"
+                  required
+              /></label>
+              <label for="email-input" class="form__label">
+                Your email *
+                <input
+                  type="email"
+                  class="form__input"
+                  name="email-input"
+                  required
+                  placeholder="email@email.com"
+                />
+              </label>
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label
+              for="checkbox-input"
+              class="form__label form__label_type_checkbox"
+            >
+              <input type="checkbox" class="form__checkbox" />
+              I agree with the terms of use
+            </label>
+          </form>
+        </section>
         <section id="menu" class="menu"></section>
         <section class="about"></section>
       </main>
