Project2 stage2 update

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 <input
                   type="number"
                   class="form__input"
+                  id="number-input"
                   name="number-input"
                   required
                   placeholder="1-8"
@@ -133,6 +134,7 @@
                 <input
                   type="datetime-local"
                   class="form__input"
+                  id="date-input"
                   name="date-input"
                   required
               /></label>
@@ -141,6 +143,7 @@
                 <input
                   type="email"
                   class="form__input"
+                  id="email-input"
                   name="email-input"
                   required
                   placeholder="email@email.com"
@@ -152,7 +155,11 @@
               for="checkbox-input"
               class="form__label form__label_type_checkbox"
             >
-              <input type="checkbox" class="form__checkbox" />
+              <input
+                type="checkbox"
+                class="form__checkbox"
+                id="checkbox-input"
+              />
               I agree with the terms of use
             </label>
           </form>
