Project2 stage4 update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="keywords" content="coffee, energize, reseration" />
     <link rel="stylesheet" href="pages/index.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -149,7 +149,7 @@
                 />
               </label>
             </fieldset>
-            <button class="form__button">Book a table</button>
+            <button class="form__button" type="submit">Book a table</button>
             <label
               for="checkbox-input"
               class="form__label form__label_type_checkbox"
